--- a/Himtos_practice_menu.css
+++ b/Himtos_practice_menu.css
@@ -3,11 +3,11 @@ header {
     width: 100%;
     height: 80px;
     background-color: #fcfafa;
-    text-decoration-color: #fcfafa;
+    text-decoration-color: white;
     z-index: 9999;
   }
   .menu{
-    background-color:#fcfafa;
+    background-color:white;
     width : 100%;
     height : 25%;
   }
@@ -19,7 +19,9 @@ header {
     height: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 8px 20px;
+    background-color: white;
+
   }
   
   .logo a {
@@ -57,7 +59,8 @@ header {
   }
   
   .hamburger-menu {
-    display: none;
+    display: flex;
+    justify-content: space-between;
     font-size: 24px;
     color: #000;
     cursor: pointer;
@@ -69,7 +72,9 @@ header {
     }
   
     .hamburger-menu {
-      display: block;
+      display: flex;
+      justify-content: space-between;
+      align-items: column;
     }
   
     .hamburger-menu i {
@@ -122,6 +127,7 @@ header {
   .menu {
     display: flex;
     justify-content: center;
+    align-items: column;
     padding: 20px;
     flex-wrap: wrap;
   }
@@ -159,9 +165,12 @@ header {
     }
     .hamburger-menu {
       display: flex;
+      justify-content: space-between;
+      text-align: center;
+      align-items: center;
     }
   
-  @media (max-width: 600px) {
+  @media (max-width: 768px) {
     .hero-image {
       width: 50%;
     }
@@ -206,13 +215,7 @@ header {
 	color: white;
 	display:flex;
 }
-.himtos_toglebtn{
-	display:none;
-	position: absolute;
-	right : 32px;
-	font-size : 24px;
-	color:orange;
-}
+
 .icons li{
 	padding:8px 12px;
 }
@@ -258,6 +261,6 @@ header {
     padding : 30px;
     background-color: rgb(251, 248, 248);
   }
-}
-}
   }
+}
+}
