--- a/Himtos_practice_menu.css
+++ b/Himtos_practice_menu.css
@@ -61,6 +61,7 @@ header {
   .hamburger-menu {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     font-size: 24px;
     color: #000;
     cursor: pointer;
